--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
   keycloak:
-    image: keycloak/keycloak
+    image: jboss/keycloak
     ports:
       - 8080:8080
     environment:
