--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
     environment:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: password
+      KEYCLOAK_FRONTEND_URL: http://localhost:8080/auth/
     volumes: 
       - keycloak-h2-directory:/opt/jboss/keycloak/standalone/data
 
@@ -70,7 +71,7 @@ services:
       - keycloak
       - minio
     environment:
-      keycloak.jwk-set-uri: http://keycloak:8080
+      keycloak.jwk-set-uri: http://keycloak:8080/auth/realms/webprotege
       spring.kafka.consumer.bootstrap-servers: http://kafka:9092
       spring.kafka.producer.bootstrap-servers: http://kafka:9092
       spring.security.oauth2.resourceserver.jwt.issuer-uri: http://keycloak:8080/auth/realms/webprotege
