--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_LOG4J_LOGGERS: "org.apache.zookeeper=ERROR,org.apache.kafka=ERROR, kafka=ERROR, kafka.cluster=ERROR,kafka.controller=ERROR, kafka.coordinator=ERROR,kafka.log=ERROR,kafka.server=ERROR,kafka.zookeeper=ERROR,state.change.logger=ERROR"
 
   keycloak:
     image: jboss/keycloak
@@ -39,6 +40,7 @@ services:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: password
       KEYCLOAK_FRONTEND_URL: http://localhost:8080/auth/
+      PROXY_ADDRESS_FORWARDING: true
     volumes: 
       - keycloak-h2-directory:/opt/jboss/keycloak/standalone/data
 
@@ -72,12 +74,13 @@ services:
       - minio
       - zipkin
     environment:
-      #keycloak.jwk-set-uri: http://keycloak:8080/auth/realms/webprotege
       spring.kafka.consumer.bootstrap-servers: http://kafka:9092
       spring.kafka.producer.bootstrap-servers: http://kafka:9092
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: http://keycloak:8080/auth/realms/webprotege/protocol/openid-connect/certs
       spring.security.oauth2.resourceserver.jwt.issuer-uri: http://keycloak:8080/auth/realms/webprotege
       spring.zipkin.baseUrl: http://zipkin:9411
+      logging.level.org.apache.kafka: warn
+      logging.level.org.springframework.kafka: warn
 
   webprotege-gwt-ui:
     image: webprotege-gwt-ui:latest
@@ -105,6 +108,8 @@ services:
       spring.kafka.consumer.bootstrap-servers: kafka:9092
       spring.kafka.producer.bootstrap-servers: kafka:9092
       spring.zipkin.baseUrl: http://zipkin:9411
+      logging.level.org.apache.kafka: warn
+      logging.level.org.springframework.kafka: warn
 
   webprotege-backend-service:
     image: webprotege-backend-service:0.1.1-SNAPSHOT
