--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,8 +39,7 @@ services:
     environment:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: password
-      KEYCLOAK_FRONTEND_URL: http://localhost:8080/auth/
-      PROXY_ADDRESS_FORWARDING: true
+      KEYCLOAK_FRONTEND_URL: http://localhost/auth/
     volumes: 
       - keycloak-h2-directory:/opt/jboss/keycloak/standalone/data
 
@@ -57,17 +56,17 @@ services:
     restart: always
     volumes:
      - minio_data:/data
-    ports:
-      - 9000:9000
-      - 9001:9001
+    # ports:
+      # - 9000:9000
+      # - 9001:9001
     environment:
       MINIO_ROOT_USER: webprotege
       MINIO_ROOT_PASSWORD: webprotege
 
   webprotege-gwt-api-gateway:
     image: webprotege-gwt-api-gateway:0.1.1-SNAPSHOT
-    ports:
-      - 7777:7777
+    # ports:
+      # - 7777:7777
     depends_on:
       - kafka
       - keycloak
@@ -86,8 +85,8 @@ services:
     image: webprotege-gwt-ui:latest
     depends_on:
       - webprotege-gwt-api-gateway
-    ports:
-      - 8888:8080
+    # ports:
+      # - 8888:8080
     environment:
       minio.access.key: minioadmin
       minio.access.secret: minioadmin
@@ -124,6 +123,16 @@ services:
       webprotege.directories.data: /srv/webprotege
       spring.kafka.consumer.bootstrap-servers: kafka:9092
       spring.kafka.producer.bootstrap-servers: kafka:9092
+      logging.level.org.apache.kafka: warn
+      logging.level.org.springframework.kafka: warn
+
+  nginx:
+    image: webprotege-nginx:latest
+    ports:
+      - 80:80
+    depends_on: 
+      - webprotege-gwt-ui
+      - keycloak
 
 volumes:
   webprotege-data-directory:
