Redirect from webprotege path (for now)

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,19 +5,8 @@ server {
 
 
 
-    location /webprotege/WebProtege.jsp {
-        proxy_pass http://webprotege-gwt-ui:8080/webprotege/WebProtege.jsp;
-        proxy_set_header   Host $http_host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Host  $host;
-        proxy_set_header   X-Forwarded-Server  $host;
-        proxy_set_header   X-Forwarded-Port  $server_port;
-        proxy_set_header   X-Forwarded-Proto $scheme;
-    }
-
     location / {
-        proxy_pass http://webprotege-gwt-ui:8080/webprotege/;
+        proxy_pass http://webprotege-gwt-ui:8080/;
         proxy_set_header   Host $http_host;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -37,9 +26,4 @@ server {
         proxy_set_header   X-Forwarded-Port  $server_port;
         proxy_set_header   X-Forwarded-Proto $scheme;
     }
-
-    # error_page   500 502 503 504  /50x.html;
-    # location = /50x.html {
-    #     root   /usr/share/nginx/html;
-    # }
 }
