--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
@@ -34,11 +35,12 @@ services:
 
   keycloak:
     image: jboss/keycloak
-    ports:
-      - 8080:8080
+    # ports:
+    #   - 8080:8080
     environment:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: password
+      PROXY_ADDRESS_FORWARDING: true
       KEYCLOAK_FRONTEND_URL: http://localhost/auth/
     volumes: 
       - keycloak-h2-directory:/opt/jboss/keycloak/standalone/data
@@ -120,6 +122,7 @@ services:
     environment:
       spring.data.mongodb.host: mongo
       spring.data.mongodb.database: webprotege
+      spring.zipkin.baseUrl: http://zipkin:9411
       webprotege.directories.data: /srv/webprotege
       spring.kafka.consumer.bootstrap-servers: kafka:9092
       spring.kafka.producer.bootstrap-servers: kafka:9092
