--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     volumes:
       - pulsardata:/pulsar/data
       - pulsarconf:/pulsar/conf
+    command: bin/pulsar standalone
 
   keycloak:
     image: jboss/keycloak
@@ -63,13 +64,13 @@ services:
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: http://keycloak:8080/auth/realms/webprotege/protocol/openid-connect/certs
       spring.security.oauth2.resourceserver.jwt.issuer-uri: http://keycloak:8080/auth/realms/webprotege
       spring.zipkin.baseUrl: http://zipkin:9411
-      webprotege.pulsar.serviceHttpUrl: http://localhost:8080
-      webprotege.pulsar.serviceUrl: pulsar://localhost:6650
+      webprotege.pulsar.serviceHttpUrl: http://pulsar:8080
+      webprotege.pulsar.serviceUrl: pulsar://pulsar:6650
       webprotege.pulsar.tenant: webprotege
       webprotege.pulsar.command-replies.subscriptionExpiraryTimeMinutes: 5
 
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui:5.0.0-SNAPSHOT
+    image: protegeproject/webprotege-gwt-ui-server:5.0.0-SNAPSHOT
     depends_on:
       - webprotege-gwt-api-gateway
     # ports:
@@ -92,8 +93,8 @@ services:
       spring.data.mongodb.database: webprotege
       keycloak.jwk-set-uri: http://keycloak:8080
       spring.zipkin.baseUrl: http://zipkin:9411
-      webprotege.pulsar.serviceHttpUrl: http://localhost:8080
-      webprotege.pulsar.serviceUrl: pulsar://localhost:6650
+      webprotege.pulsar.serviceHttpUrl: http://pulsar:8080
+      webprotege.pulsar.serviceUrl: pulsar://pulsar:6650
       webprotege.pulsar.tenant: webprotege
       webprotege.pulsar.command-replies.subscriptionExpiraryTimeMinutes: 5
 
@@ -109,19 +110,19 @@ services:
       spring.data.mongodb.database: webprotege
       spring.zipkin.baseUrl: http://zipkin:9411
       webprotege.directories.data: /srv/webprotege
-      webprotege.pulsar.serviceHttpUrl: http://localhost:8080
-      webprotege.pulsar.serviceUrl: pulsar://localhost:6650
+      webprotege.pulsar.serviceHttpUrl: http://pulsar:8080
+      webprotege.pulsar.serviceUrl: pulsar://pulsar:6650
       webprotege.pulsar.tenant: webprotege
       webprotege.pulsar.command-replies.subscriptionExpiraryTimeMinutes: 5
     volumes:
       - webprotege-data-directory:/srv/webprotege
 
   nginx:
-    image: webprotege-nginx:latest
+    image: protegeproject/webprotege-nginx:latest
     ports:
       - 80:80
     depends_on: 
-      - webprotege-gwt-ui
+      - webprotege-gwt-ui-server
       - keycloak
 
 volumes:
@@ -129,3 +130,5 @@ volumes:
   mongo-data-directory:
   keycloak-h2-directory:
   minio_data:
+  pulsardata:
+  pulsarconf:
