--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
 
 
     location / {
-        proxy_pass http://webprotege-gwt-ui:8080/;
+        proxy_pass http://webprotege-gwt-ui-server:8080/;
         proxy_set_header   Host $http_host;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
