Added JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED to services that depend upon Pulsar to work around a reflective access problem with the current Pulsar client

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,6 +99,7 @@ services:
       webprotege.pulsar.serviceUrl: pulsar://pulsar:6650
       webprotege.pulsar.tenant: webprotege
       webprotege.pulsar.command-replies.subscriptionExpiraryTimeMinutes: 5
+      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
 
   webprotege-backend-service:
     user: root
@@ -116,6 +117,7 @@ services:
       webprotege.pulsar.serviceUrl: pulsar://pulsar:6650
       webprotege.pulsar.tenant: webprotege
       webprotege.pulsar.command-replies.subscriptionExpiraryTimeMinutes: 5
+      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
     volumes:
       - webprotege-data-directory:/srv/webprotege
 
