--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,8 @@
-# This file gets included into the http block
 server {
     listen 80;
-    server_name localhost 127.0.0.1;
-
-
-
+    server_name webprotege-local.edu;
     location / {
-        proxy_pass http://webprotege-gwt-ui-server:8080/;
+        proxy_pass http://webprotege-gwt-ui-server:8080/webprotege/;
         proxy_set_header   Host $http_host;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -14,8 +10,21 @@ server {
         proxy_set_header   X-Forwarded-Server  $host;
         proxy_set_header   X-Forwarded-Port  $server_port;
         proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
+        # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
     }
-
+    location /webprotege/ {
+        proxy_pass http://webprotege-gwt-ui-server:8080/webprotege/;
+        proxy_set_header   Host $http_host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host  $host;
+        proxy_set_header   X-Forwarded-Server  $host;
+        proxy_set_header   X-Forwarded-Port  $server_port;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
+        # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
+    }
     location /auth/ {
         proxy_pass http://keycloak:8080/auth/;
         proxy_set_header   Host $http_host;
@@ -25,5 +34,9 @@ server {
         proxy_set_header   X-Forwarded-Server  $host;
         proxy_set_header   X-Forwarded-Port  $server_port;
         proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_redirect    http://keycloak:8080/auth/ http://webprotege-local.edu/auth/;
+        # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
+        # subs_filter st(\d*).example.com $1.example.com ir;
+        # subs_filter keycloak:8080 localhost;
     }
 }
