--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 
 services:
 
@@ -11,22 +11,29 @@ services:
 
   pulsar:
     image: apachepulsar/pulsar:2.9.1
+    user: root
     ports:
       - 6650:6650
-      - 8080:8080
     volumes:
       - pulsardata:/pulsar/data
       - pulsarconf:/pulsar/conf
-    command: bin/pulsar standalone
+    command: /pulsar/bin/pulsar standalone
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8080/admin/v2/brokers/health"]
+      interval: 2s
+      timeout: 5s
+      retries: 15
+
 
   keycloak:
     image: jboss/keycloak
-    # ports:
-    #   - 8080:8080
+    ports:
+      - 8080:8080
     environment:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: password
       PROXY_ADDRESS_FORWARDING: true
+#      KEYCLOAK_LOGLEVEL: DEBUG
       KEYCLOAK_FRONTEND_URL: http://localhost/auth/
     volumes: 
       - keycloak-h2-directory:/opt/jboss/keycloak/standalone/data
@@ -52,14 +59,19 @@ services:
       MINIO_ROOT_PASSWORD: webprotege
 
   webprotege-gwt-api-gateway:
-    image: protegeproject/webprotege-gwt-api-gateway:0.1.1-SNAPSHOT
+    image: protegeproject/webprotege-gwt-api-gateway:0.1.2-SNAPSHOT
     # ports:
       # - 7777:7777
     depends_on:
-      - pulsar
-      - keycloak
-      - minio
-      - zipkin
+      pulsar:
+        condition: service_healthy
+      keycloak:
+        condition: service_started
+      minio:
+        condition: service_started
+      zipkin:
+        condition: service_started
+
     environment:
       spring.security.oauth2.resourceserver.jwt.jwk-set-uri: http://keycloak:8080/auth/realms/webprotege/protocol/openid-connect/certs
       spring.security.oauth2.resourceserver.jwt.issuer-uri: http://keycloak:8080/auth/realms/webprotege
@@ -71,7 +83,7 @@ services:
       webprotege.apigateway.forceUserName: jodydoe
 
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui-server:5.0.0-SNAPSHOT
+    image: protegeproject/webprotege-gwt-ui-server:5.0.1-SNAPSHOT
     depends_on:
       - webprotege-gwt-api-gateway
     # ports:
@@ -83,12 +95,16 @@ services:
       webprotege.gwt-api-gateway.endPoint: http://webprotege-gwt-api-gateway:7777
 
   webprotege-authorization-service:
-    image: protegeproject/webprotege-authorization-service:0.1.2
+    image: protegeproject/webprotege-authorization-service:0.2.2
     depends_on:
-      - keycloak
-      - mongo
-      - pulsar
-      - zipkin
+      keycloak:
+        condition: service_started
+      mongo:
+        condition: service_started
+      pulsar:
+        condition: service_healthy
+      zipkin:
+        condition: service_started
     environment:
       spring.data.mongodb.host: mongo
       spring.data.mongodb.database: webprotege
@@ -101,11 +117,15 @@ services:
 
   webprotege-backend-service:
     user: root
-    image: protegeproject/webprotege-backend-service:0.1.1
+    image: protegeproject/webprotege-backend-service:0.2.0
     depends_on:
-      - mongo
-      - pulsar
-      - zipkin
+      mongo:
+        condition: service_started
+      pulsar:
+        condition: service_healthy
+      zipkin:
+        condition: service_started
+
     environment:
       spring.data.mongodb.host: mongo
       spring.data.mongodb.database: webprotege
