--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,42 +10,34 @@ services:
       - mongo-data-directory:/data/db
 
   pulsar:
-    image: apachepulsar/pulsar:2.9.1
+    image: apachepulsar/pulsar:2.11.2
     user: root
     ports:
-      - 6650:6650
+      - "8080:8080"
+      - "6650:6650"
     volumes:
       - pulsardata:/pulsar/data
       - pulsarconf:/pulsar/conf
-    command: /pulsar/bin/pulsar standalone  -nss
+    command: /pulsar/bin/pulsar standalone
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8080/admin/v2/brokers/health"]
       interval: 2s
       timeout: 5s
       retries: 15
-
-  pulsar-admin:
-    image: apachepulsar/pulsar-manager:v0.3.0
-    ports:
-      - "9527:9527"
-      - "7750:7750"
-    environment:
-      - SPRING_CONFIGURATION_FILE=/pulsar-manager/pulsar-manager/application.properties
-    depends_on:
-      pulsar:
-        condition: service_healthy
+    restart: no
 
   keycloak:
     image: jboss/keycloak
-    ports:
-      - 8080:8080
+    # ports:
+    #   - 8080:8080
     environment:
       #KEYCLOAK_USER: admin
       #KEYCLOAK_PASSWORD: password
       PROXY_ADDRESS_FORWARDING: true
       KEYCLOAK_LOGLEVEL: DEBUG
-      KEYCLOAK_FRONTEND_URL: http://localhost/auth/
-    volumes: 
+      KEYCLOAK_FRONTEND_URL: "http://webprotege-local.edu/auth"
+
+    volumes:
       - keycloak-h2-directory:/opt/jboss/keycloak/standalone/data
     healthcheck:
       test: [ "CMD", "curl", "--fail", "http://localhost:8080/auth/realms/master" ]
@@ -73,27 +65,30 @@ services:
 
   webprotege-gwt-api-gateway:
     image: protegeproject/webprotege-gwt-api-gateway:0.1.2-SNAPSHOT
-    # ports:
-      # - 7777:7777
+
+    ports:
+      - '5005:5005'
     depends_on:
       pulsar:
         condition: service_healthy
       keycloak:
-        condition: service_started
+        condition: service_healthy
       minio:
         condition: service_started
       zipkin:
         condition: service_started
 
     environment:
-      spring.security.oauth2.resourceserver.jwt.jwk-set-uri: http://keycloak:8080/auth/realms/webprotege/protocol/openid-connect/certs
-      spring.security.oauth2.resourceserver.jwt.issuer-uri: http://keycloak:8080/auth/realms/webprotege
       spring.zipkin.baseUrl: http://zipkin:9411
       webprotege.pulsar.serviceHttpUrl: http://pulsar:8080
       webprotege.pulsar.serviceUrl: pulsar://pulsar:6650
       webprotege.pulsar.tenant: webprotege
+
       webprotege.pulsar.command-replies.subscriptionExpiraryTimeMinutes: 5
-      webprotege.apigateway.forceUserName: jodydoe
+      _JAVA_OPTIONS: >
+        -Xdebug
+        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+
 
   webprotege-gwt-ui-server:
     image: protegeproject/webprotege-gwt-ui-server:5.0.2-SNAPSHOT
@@ -110,8 +105,9 @@ services:
       minio.endPoint: http://minio:9000
       webprotege.gwt-api-gateway.endPoint: http://webprotege-gwt-api-gateway:7777
 
+
   webprotege-authorization-service:
-    image: protegeproject/webprotege-authorization-service:0.2.2
+    image: protegeproject/webprotege-authorization-service:0.2.3-SNAPSHOT
     depends_on:
       keycloak:
         condition: service_healthy
@@ -155,7 +151,8 @@ services:
       - webprotege-data-directory:/srv/webprotege
 
   nginx:
-    image: protegeproject/webprotege-nginx:latest
+    image: webprotege-nginx:1.0.0
+    hostname: webprotege-local.edu
     ports:
       - 80:80
     depends_on: 
