--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -10,30 +10,34 @@ services:
       - mongo-data-directory:/data/db
 
   pulsar:
-    image: apachepulsar/pulsar:2.9.1
+    image: apachepulsar/pulsar:2.11.2
     user: root
     ports:
-      - 6650:6650
-      - 8080:8080
+      - "8080:8080"
+      - "6650:6650"
     volumes:
       - pulsardata:/pulsar/data
       - pulsarconf:/pulsar/conf
-    command: /pulsar/bin/pulsar standalone  -nss
+    command: /pulsar/bin/pulsar standalone
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8080/admin/v2/brokers/health"]
       interval: 2s
       timeout: 5s
       retries: 15
+    restart: no
 
   keycloak:
     image: jboss/keycloak
+    # ports:
+    #   - 8080:8080
     environment:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: password
       PROXY_ADDRESS_FORWARDING: true
       KEYCLOAK_LOGLEVEL: DEBUG
-      KEYCLOAK_FRONTEND_URL: http://localhost/auth/
-    volumes: 
+      KEYCLOAK_FRONTEND_URL: "http://webprotege-local.edu/auth"
+
+    volumes:
       - keycloak-h2-directory:/opt/jboss/keycloak/standalone/data
     healthcheck:
       test: [ "CMD", "curl", "--fail", "http://localhost:8080/auth/realms/master" ]
@@ -69,25 +73,29 @@ services:
 
   webprotege-gwt-api-gateway:
     image: protegeproject/webprotege-gwt-api-gateway:0.1.2-SNAPSHOT
+
     ports:
-     - 7777:7777
+      - '5005:5005'
     depends_on:
       pulsar:
         condition: service_healthy
       keycloak:
-        condition: service_started
+        condition: service_healthy
       minio:
         condition: service_started
-
     environment:
       webprotege.pulsar.serviceHttpUrl: http://pulsar:8080
       webprotege.pulsar.serviceUrl: pulsar://pulsar:6650
       webprotege.pulsar.tenant: webprotege
+
       webprotege.pulsar.command-replies.subscriptionExpiraryTimeMinutes: 5
-      webprotege.apigateway.forceUserName: jodydoe
+      _JAVA_OPTIONS: >
+        -Xdebug
+        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
 
   nginx:
     image: protegeproject/webprotege-nginx:latest
+    hostname: webprotege-local.edu
     ports:
       - 80:80
     depends_on:
