--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,44 +15,27 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
-
-  pulsar:
-    image: apachepulsar/pulsar:2.11.2
-    user: root
-    ports:
-      - "6650:6650"
-      - "8081:8080"
-    volumes:
-      - pulsardata:/pulsar/data
-      - pulsarconf:/pulsar/conf
-    command: /pulsar/bin/pulsar standalone
-    environment:
-      - managedLedgerDefaultEnsembleSize=1
-      - managedLedgerDefaultWriteQuorum=1
-      - managedLedgerDefaultAckQuorum=1
-      - advertisedAddress=pulsar
-      - advertisedListeners=external:pulsar://pulsar:6650
-      - PULSAR_MEM=-Xms512m -Xmx512m -XX:MaxDirectMemorySize=256m
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:8080/admin/v2/brokers/health"]
+      test: ["CMD", "rabbitmqctl", "status"]
       interval: 30s
-      timeout: 5s
-      retries: 15
-    restart: no
+      timeout: 10s
+      retries: 5
 
   keycloak:
     image: jboss/keycloak
     # ports:
     #   - 8080:8080
     environment:
-      #KEYCLOAK_USER: admin
-      #KEYCLOAK_PASSWORD: password
+      KEYCLOAK_USER: admin
+      KEYCLOAK_PASSWORD: password
       PROXY_ADDRESS_FORWARDING: true
       KEYCLOAK_LOGLEVEL: DEBUG
       KEYCLOAK_FRONTEND_URL: "http://webprotege-local.edu/auth"
-
+      KEYCLOAK_IMPORT: /tmp/webprotege.json
+      KEYCLOAK_HOSTNAME_ADMIN_URL: "http://webprotege-local.edu/auth"
     volumes:
       - keycloak-h2-directory:/opt/jboss/keycloak/standalone/data
+      - ./keycloak:/tmp
     healthcheck:
       test: [ "CMD", "curl", "--fail", "http://localhost:8080/auth/realms/master" ]
       interval: 30s
@@ -80,23 +63,17 @@ services:
   webprotege-gwt-api-gateway:
     image: protegeproject/webprotege-gwt-api-gateway:0.1.2-SNAPSHOT
     depends_on:
-      pulsar:
-        condition: service_healthy
       keycloak:
         condition: service_healthy
       minio:
         condition: service_started
+      rabbitmq:
+        condition: service_healthy
       zipkin:
         condition: service_started
 
     environment:
       spring.zipkin.baseUrl: http://zipkin:9411
-      webprotege.pulsar.serviceHttpUrl: http://pulsar:8080
-      webprotege.pulsar.serviceUrl: pulsar://pulsar:6650
-      webprotege.pulsar.tenant: webprotege
-
-      webprotege.pulsar.command-replies.subscriptionExpiraryTimeMinutes: 5
-
 
 
   webprotege-gwt-ui-server:
@@ -122,19 +99,15 @@ services:
         condition: service_healthy
       mongo:
         condition: service_started
-      pulsar:
-        condition: service_healthy
       zipkin:
         condition: service_started
+      rabbitmq:
+        condition: service_healthy
     environment:
       spring.data.mongodb.host: mongo
       spring.data.mongodb.database: webprotege
       keycloak.jwk-set-uri: http://keycloak:8080
       spring.zipkin.baseUrl: http://zipkin:9411
-      webprotege.pulsar.serviceHttpUrl: http://pulsar:8080
-      webprotege.pulsar.serviceUrl: pulsar://pulsar:6650
-      webprotege.pulsar.tenant: webprotege
-      webprotege.pulsar.command-replies.subscriptionExpiraryTimeMinutes: 5
 
   webprotege-backend-service:
     user: root
@@ -144,26 +117,43 @@ services:
     depends_on:
       mongo:
         condition: service_started
-      pulsar:
-        condition: service_healthy
       zipkin:
         condition: service_started
-
+      rabbitmq:
+        condition: service_healthy
     environment:
       spring.data.mongodb.host: mongo
       spring.data.mongodb.database: webprotege
       spring.zipkin.baseUrl: http://zipkin:9411
       webprotege.directories.data: /srv/webprotege
-      webprotege.pulsar.serviceHttpUrl: http://pulsar:8080
-      webprotege.pulsar.serviceUrl: pulsar://pulsar:6650
-      webprotege.pulsar.tenant: webprotege
-      webprotege.pulsar.command-replies.subscriptionExpiraryTimeMinutes: 5
       _JAVA_OPTIONS: >
         -Xdebug
         -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
     volumes:
       - webprotege-data-directory:/srv/webprotege
 
+  webprotege-backend-service2:
+    user: root
+    image: protegeproject/webprotege-backend-service:0.2.0
+    ports:
+      - '5006:5005'
+    depends_on:
+      mongo:
+        condition: service_started
+      zipkin:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+    environment:
+      spring.data.mongodb.host: mongo
+      spring.data.mongodb.database: webprotege
+      spring.zipkin.baseUrl: http://zipkin:9411
+      webprotege.directories.data: /srv/webprotege
+      _JAVA_OPTIONS: >
+        -Xdebug
+        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+    volumes:
+      - webprotege-data-directory:/srv/webprotege
   nginx:
     image: webprotege-nginx:1.0.0
     hostname: webprotege-local.edu
@@ -178,5 +168,3 @@ volumes:
   mongo-data-directory:
   keycloak-h2-directory:
   minio_data:
-  pulsardata:
-  pulsarconf:
