Update to latest release versions of services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
   rabbitmq:
     image: rabbitmq:management
-    restart: no
+    restart: "no"
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -61,7 +61,7 @@ services:
       MINIO_ROOT_PASSWORD: webprotege
 
   webprotege-gwt-api-gateway:
-    image: protegeproject/webprotege-gwt-api-gateway:0.1.2-SNAPSHOT
+    image: protegeproject/webprotege-gwt-api-gateway:1.0.0
     depends_on:
       keycloak:
         condition: service_healthy
@@ -77,7 +77,7 @@ services:
 
 
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui-server:5.0.2-SNAPSHOT
+    image: protegeproject/webprotege-gwt-ui-server:5.0.2
     depends_on:
       webprotege-gwt-api-gateway:
         condition: service_started
@@ -93,7 +93,7 @@ services:
 
 
   webprotege-authorization-service:
-    image: protegeproject/webprotege-authorization-service:0.2.3-SNAPSHOT
+    image: protegeproject/webprotege-authorization-service:1.0.0
     depends_on:
       keycloak:
         condition: service_healthy
@@ -111,7 +111,7 @@ services:
 
   webprotege-backend-service:
     user: root
-    image: protegeproject/webprotege-backend-service:0.2.0
+    image: protegeproject/webprotege-backend-service:1.0.0
     ports:
       - '5005:5005'
     depends_on:
@@ -134,7 +134,7 @@ services:
 
 
   nginx:
-    image: webprotege-nginx:1.0.0
+    image: protegeproject/webprotege-nginx:1.0.0
     hostname: webprotege-local.edu
     ports:
       - 80:80
