--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
   rabbitmq:
     image: rabbitmq:management
-    restart: no
+    restart: "no"
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -20,6 +20,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+
 
   keycloak:
     image: jboss/keycloak
@@ -61,7 +62,7 @@ services:
       MINIO_ROOT_PASSWORD: webprotege
 
   webprotege-gwt-api-gateway:
-    image: protegeproject/webprotege-gwt-api-gateway:0.1.2-SNAPSHOT
+    image: protegeproject/webprotege-gwt-api-gateway:1.0.1-SNAPSHOT
     depends_on:
       keycloak:
         condition: service_healthy
@@ -75,10 +76,12 @@ services:
     environment:
       spring.zipkin.baseUrl: http://zipkin:9411
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+      SPRING_RABBITMQ_PUBLISHER_CONFIRM_TYPE: NONE
+      SPRING_RABBITMQ_PUBLISHER_RETURNS: FALSE
 
 
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui-server:5.0.2-SNAPSHOT
+    image: protegeproject/webprotege-gwt-ui-server:5.0.2
     depends_on:
       webprotege-gwt-api-gateway:
         condition: service_started
@@ -94,7 +97,7 @@ services:
 
 
   webprotege-authorization-service:
-    image: protegeproject/webprotege-authorization-service:0.2.3-SNAPSHOT
+    image: protegeproject/webprotege-authorization-service:1.0.0
     depends_on:
       keycloak:
         condition: service_healthy
@@ -111,28 +114,28 @@ services:
       spring.zipkin.baseUrl: http://zipkin:9411
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
 
-  webprotege-user-management:
-    image: protegeproject/webprotege-user-management:0.0.1-SNAPSHOT
-    ports:
-      - '5006:5006'
-    depends_on:
-      keycloak:
-        condition: service_healthy
-      mongo:
-        condition: service_started
-      zipkin:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-    environment:
-      _JAVA_OPTIONS: >
-        -Xdebug
-        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006
-      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+#  webprotege-user-management:
+#    image: protegeproject/webprotege-user-management:0.0.1-SNAPSHOT
+#    ports:
+#      - '5006:5006'
+#    depends_on:
+#      keycloak:
+#        condition: service_healthy
+#      mongo:
+#        condition: service_started
+#      zipkin:
+#        condition: service_started
+#      rabbitmq:
+#        condition: service_healthy
+#    environment:
+#      _JAVA_OPTIONS: >
+#        -Xdebug
+#        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006
+#      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
 
   webprotege-backend-service:
     user: root
-    image: protegeproject/webprotege-backend-service:0.2.0
+    image: protegeproject/webprotege-backend-service:1.0.0
     ports:
       - '5005:5005'
     depends_on:
@@ -156,7 +159,7 @@ services:
 
 
   nginx:
-    image: webprotege-nginx:1.0.0
+    image: protegeproject/webprotege-nginx:1.0.0
     hostname: webprotege-local.edu
     ports:
       - 80:80
