--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -9,22 +9,17 @@ services:
     volumes:
       - mongo-data-directory:/data/db
 
-  pulsar:
-    image: apachepulsar/pulsar:2.11.2
-    user: root
-    ports:
-      - "8080:8080"
-      - "6650:6650"
-    volumes:
-      - pulsardata:/pulsar/data
-      - pulsarconf:/pulsar/conf
-    command: /pulsar/bin/pulsar standalone
-    healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:8080/admin/v2/brokers/health"]
-      interval: 2s
-      timeout: 5s
-      retries: 15
+  rabbitmq:
+    image: rabbitmq:management
     restart: no
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   keycloak:
     image: jboss/keycloak
@@ -36,23 +31,30 @@ services:
       PROXY_ADDRESS_FORWARDING: true
       KEYCLOAK_LOGLEVEL: DEBUG
       KEYCLOAK_FRONTEND_URL: "http://webprotege-local.edu/auth"
-
+      KEYCLOAK_IMPORT: /tmp/webprotege.json
+      KEYCLOAK_HOSTNAME_ADMIN_URL: "http://webprotege-local.edu/auth"
     volumes:
       - keycloak-h2-directory:/opt/jboss/keycloak/standalone/data
+      - ./keycloak:/tmp
     healthcheck:
       test: [ "CMD", "curl", "--fail", "http://localhost:8080/auth/realms/master" ]
       interval: 30s
       timeout: 10s
       retries: 5
 
+  zipkin:
+    image: openzipkin/zipkin
+    ports:
+      - 9411:9411
+
   minio:
     image: minio/minio
     command: [ "server", "/data" ]
     restart: always
     volumes:
-     - minio_data:/data
-    # ports:
-      # - 9000:9000
+      - minio_data:/data
+        # ports:
+        # - 9000:9000
       # - 9001:9001
     environment:
       MINIO_ROOT_USER: webprotege
@@ -61,6 +63,8 @@ services:
   webprotege-gwt-ui-server:
     image: protegeproject/webprotege-gwt-ui-server:5.0.2-SNAPSHOT
     depends_on:
+      webprotege-gwt-api-gateway:
+        condition: service_started
       keycloak:
         condition: service_healthy
     ports:
@@ -73,25 +77,40 @@ services:
 
   webprotege-gwt-api-gateway:
     image: protegeproject/webprotege-gwt-api-gateway:0.1.2-SNAPSHOT
-
     ports:
       - '5005:5005'
     depends_on:
-      pulsar:
-        condition: service_healthy
       keycloak:
         condition: service_healthy
       minio:
         condition: service_started
+      rabbitmq:
+        condition: service_healthy
+      zipkin:
+        condition: service_started
     environment:
-      webprotege.pulsar.serviceHttpUrl: http://pulsar:8080
-      webprotege.pulsar.serviceUrl: pulsar://pulsar:6650
-      webprotege.pulsar.tenant: webprotege
-
-      webprotege.pulsar.command-replies.subscriptionExpiraryTimeMinutes: 5
+      spring.zipkin.baseUrl: http://zipkin:9411
       _JAVA_OPTIONS: >
         -Xdebug
         -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+        
+
+  webprotege-authorization-service:
+    image: protegeproject/webprotege-authorization-service:0.2.3-SNAPSHOT
+    depends_on:
+      keycloak:
+        condition: service_healthy
+      mongo:
+        condition: service_started
+      zipkin:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+    environment:
+      spring.data.mongodb.host: mongo
+      spring.data.mongodb.database: webprotege
+      keycloak.jwk-set-uri: http://keycloak:8080
+      spring.zipkin.baseUrl: http://zipkin:9411
 
   nginx:
     image: protegeproject/webprotege-nginx:latest
