--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       retries: 5
 
   keycloak:
-    image: jboss/keycloak
+    image: keycloak/keycloak:latest
     # ports:
     #   - 8080:8080
     environment:
@@ -62,6 +62,7 @@ services:
 
   webprotege-gwt-api-gateway:
     image: protegeproject/webprotege-gwt-api-gateway:0.1.2-SNAPSHOT
+
     depends_on:
       keycloak:
         condition: service_healthy
@@ -76,22 +77,21 @@ services:
       spring.zipkin.baseUrl: http://zipkin:9411
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
 
-
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui-server:5.0.2-SNAPSHOT
+    image: protegeproject/webprotege-gwt-ui-server:5.0.2
     depends_on:
       webprotege-gwt-api-gateway:
         condition: service_started
       keycloak:
         condition: service_healthy
-    # ports:
-      # - 8888:8080
+    ports:
+     - 6006:6006
     environment:
       minio.access.key: minioadmin
       minio.access.secret: minioadmin
       minio.endPoint: http://minio:9000
       webprotege.gwt-api-gateway.endPoint: http://webprotege-gwt-api-gateway:7777
-
+      JAVA_OPTS: -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:6006
 
   webprotege-authorization-service:
     image: protegeproject/webprotege-authorization-service:0.2.3-SNAPSHOT
@@ -113,8 +113,6 @@ services:
 
   webprotege-user-management:
     image: protegeproject/webprotege-user-management:0.0.1-SNAPSHOT
-    ports:
-      - '5006:5006'
     depends_on:
       keycloak:
         condition: service_healthy
@@ -125,10 +123,25 @@ services:
       rabbitmq:
         condition: service_healthy
     environment:
+      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+
+  webprotege-events-history-service:
+    image: protegeproject/webprotege-events-history:0.0.1-SNAPSHOT
+    ports:
+      - '5006:5006'
+    depends_on:
+      mongo:
+        condition: service_started
+      zipkin:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+    environment:
+      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
       _JAVA_OPTIONS: >
         -Xdebug
         -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006
-      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+
 
   webprotege-backend-service:
     user: root
