--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,13 +23,13 @@ services:
 
 
   keycloak:
-    image: jboss/keycloak
+    image: protegeproject/keycloak
     # ports:
     #   - 8080:8080
     environment:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: password
-      PROXY_ADDRESS_FORWARDING: true
+      PROXY_ADDRESS_FORWARDING: "true"
       KEYCLOAK_LOGLEVEL: DEBUG
       KEYCLOAK_FRONTEND_URL: "http://webprotege-local.edu/auth"
       KEYCLOAK_IMPORT: /tmp/webprotege.json
@@ -62,7 +62,7 @@ services:
       MINIO_ROOT_PASSWORD: webprotege
 
   webprotege-gwt-api-gateway:
-    image: protegeproject/webprotege-gwt-api-gateway:1.0.1-SNAPSHOT
+    image: protegeproject/webprotege-gwt-api-gateway:1.0.1
     depends_on:
       keycloak:
         condition: service_healthy
@@ -77,7 +77,7 @@ services:
       spring.zipkin.baseUrl: http://zipkin:9411
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
       SPRING_RABBITMQ_PUBLISHER_CONFIRM_TYPE: NONE
-      SPRING_RABBITMQ_PUBLISHER_RETURNS: FALSE
+      SPRING_RABBITMQ_PUBLISHER_RETURNS: "FALSE"
 
 
   webprotege-gwt-ui-server:
@@ -97,7 +97,7 @@ services:
 
 
   webprotege-authorization-service:
-    image: protegeproject/webprotege-authorization-service:1.0.0
+    image: protegeproject/webprotege-authorization-service:1.0.1
     depends_on:
       keycloak:
         condition: service_healthy
@@ -114,24 +114,24 @@ services:
       spring.zipkin.baseUrl: http://zipkin:9411
       JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
 
-#  webprotege-user-management:
-#    image: protegeproject/webprotege-user-management:0.0.1-SNAPSHOT
-#    ports:
-#      - '5006:5006'
-#    depends_on:
-#      keycloak:
-#        condition: service_healthy
-#      mongo:
-#        condition: service_started
-#      zipkin:
-#        condition: service_started
-#      rabbitmq:
-#        condition: service_healthy
-#    environment:
-#      _JAVA_OPTIONS: >
-#        -Xdebug
-#        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006
-#      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
+  webprotege-user-management:
+    image: protegeproject/webprotege-user-management:0.0.1
+    ports:
+      - '5006:5006'
+    depends_on:
+      keycloak:
+        condition: service_healthy
+      mongo:
+        condition: service_started
+      zipkin:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
+    environment:
+      _JAVA_OPTIONS: >
+        -Xdebug
+        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006
+      JDK_JAVA_OPTIONS: --add-opens java.base/sun.net=ALL-UNNAMED
 
   webprotege-backend-service:
     user: root
