--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name webprotege-local.edu;
+
     location / {
         proxy_pass http://webprotege-gwt-ui-server:8080/webprotege/;
         proxy_set_header   Host $http_host;
@@ -13,6 +14,7 @@ server {
         proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
         # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
     }
+
     location /webprotege/ {
         proxy_pass http://webprotege-gwt-ui-server:8080/webprotege/;
         proxy_set_header   Host $http_host;
@@ -25,6 +27,7 @@ server {
         proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
         # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
     }
+
     location /auth/ {
         proxy_pass http://keycloak:8080/auth/;
         proxy_set_header   Host $http_host;
@@ -39,4 +42,23 @@ server {
         # subs_filter st(\d*).example.com $1.example.com ir;
         # subs_filter keycloak:8080 localhost;
     }
+
+    location /wsapps {
+
+        proxy_pass http://webprotege-events-history-service:7761;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+
+    }
+}
+
+upstream websocket  {
+    server webprotege-events-history-service:7761;
+}
+
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
 }
