--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       MINIO_ROOT_PASSWORD: webprotege
 
   webprotege-gwt-api-gateway:
-    image: protegeproject/webprotege-gwt-api-gateway:1.0.2
+    image: protegeproject/webprotege-gwt-api-gateway:1.0.3
     depends_on:
       keycloak:
         condition: service_healthy
@@ -80,7 +80,7 @@ services:
       SPRING_RABBITMQ_PUBLISHER_RETURNS: "FALSE"
 
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui-server:5.0.4
+    image: protegeproject/webprotege-gwt-ui-server:5.0.6-WHO
     depends_on:
       webprotege-gwt-api-gateway:
         condition: service_started
