--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,7 +80,7 @@ services:
       SPRING_RABBITMQ_PUBLISHER_RETURNS: "FALSE"
 
   webprotege-gwt-ui-server:
-    image: protegeproject/webprotege-gwt-ui-server:5.0.4
+    image: protegeproject/webprotege-gwt-ui-server:5.0.6-SNAPSHOT
     depends_on:
       webprotege-gwt-api-gateway:
         condition: service_started
@@ -147,7 +147,7 @@ services:
 
   webprotege-backend-service:
     user: root
-    image: protegeproject/webprotege-backend-service:1.1.2
+    image: protegeproject/webprotege-backend-service:1.2.2
     ports:
       - '5005:5005'
     depends_on:
@@ -158,8 +158,6 @@ services:
       rabbitmq:
         condition: service_healthy
     environment:
-      spring.data.mongodb.host: mongo
-      spring.data.mongodb.database: webprotege
       spring.zipkin.baseUrl: http://zipkin:9411
       webprotege.directories.data: /srv/webprotege
       _JAVA_OPTIONS: >
