Trying a different keycloak image that is rumored to work on Apple Silicon

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
 
 
   keycloak:
-    image: protegeproject/keycloak
+    image: sleighzy/keycloak
     # ports:
     #   - 8080:8080
     environment:
