--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,6 +13,7 @@ server {
         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
         # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
+        client_max_body_size   500m;
     }
 
     location /webprotege/ {
@@ -26,6 +27,7 @@ server {
         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
         # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
+        client_max_body_size   500m;
     }
 
     location /auth/ {
