--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,12 @@ server {
         client_max_body_size   500m;
     }
 
+    location /files/submit {
+        proxy_pass http://webprotege-gwt-api-gateway:7777;
+        proxy_set_header   Host $http_host;
+        # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
+    }
+
     location /auth/ {
         proxy_pass http://keycloak:8080/auth/;
         proxy_set_header   Host $http_host;
