--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,9 @@
 server {
     listen 80;
     server_name webprotege-local.edu;
+    sendfile on;
+    client_max_body_size 40M;
+    client_body_buffer_size 40M;
 
     location / {
         proxy_pass http://webprotege-gwt-ui-server:8080/webprotege/;
