--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,21 @@ server {
         client_max_body_size   500m;
     }
 
+    location /data/ {
+        proxy_pass http://webprotege-gwt-api-gateway:7777/data/;
+        proxy_set_header   Host $http_host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host  $host;
+        proxy_set_header   X-Forwarded-Server  $host;
+        proxy_set_header   X-Forwarded-Port  $server_port;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_redirect    http://keycloak:8080/auth/ http://localhost/auth/;
+        # proxy_redirect    http://localhost:8080/auth/ http://localhost/auth/;
+        client_max_body_size   500m;
+        rewrite_log on;
+    }
+
     location /auth/ {
         proxy_pass http://keycloak:8080/auth/;
         proxy_set_header   Host $http_host;
