Update the proxy_pass URL for /files/submit.  Also set client_max_body_size

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,8 +31,9 @@ server {
     }
 
     location /files/submit {
-        proxy_pass http://webprotege-gwt-api-gateway:7777;
+        proxy_pass http://webprotege-gwt-api-gateway:7777/files/submit;
         proxy_set_header   Host $http_host;
+        client_max_body_size   500m;
     }
 
     location /data/ {
